# Succinct

./: .gitignore  Cargo.toml  rust-analyzer.toml
.cargo/: config.toml
.zed/: settings.json
examples/: create_db.rs
migrations/: 20260314012139_create_files_table.sql  20260320013059_init_schema.sql
scripts/: script.rs
src/: config.rs  database.rs  db.rs  delta.rs  delta_emitter.rs  entry.rs  lib.rs  macros.rs  main.rs  path.rs  path_cache.rs  state.rs  watcher.rs
src/config/: config.rs  create_ignore.rs  mod.rs  settings.rs
src/database/: file.rs  file_id.rs  local_reader.rs  local_writer.rs  remote_writer.rs
src/database/file/: bytes.rs  id.rs  name.rs
src/db/: remote.rs  tables.rs  writer.rs
src/db/tables/: file.rs  macros.rs  queued_deltas.rs  timestamp.rs
src/db/tables/file/: bytes.rs  child_id.rs  id.rs  info.rs  name.rs  name_buf.rs
src/path/: abs_path.rs  fs.rs  mod.rs  rel_path.rs
src/state/: file.rs  local.rs  merge.rs  mod.rs  prepare_deltas.rs  push.rs  remote.rs  remote_drive.rs  state.rs
src/state/remote_drive/: mod.rs  remote_drive.rs  save.rs
src/tree_sitter/: convert_predelta.rs  event.rs  mod.rs  predelta.rs  subscribe.rs  tree_sitter.rs  watch.rs
src/tree_sitter/handle_event/: create.rs  delete.rs  mod.rs  update.rs
src/tree_sitter/predelta_buffer/: debouncer.rs  mod.rs  predelta_buffer.rs
src/utils/: mod.rs
src/watcher/: walk_directory.rs
