[package]
name = "succinct"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
compact_str = {version = "0.9.0", features = ["sqlx-sqlite","sqlx-postgres"]}
derive_more = { version = "2.1.1", features = ["deref", "from", "into"] }
futures = "0.3.32"
inotify = "0.10"
ignore = "0.4"
opendal = { version = "0.55.0", features = ["services-gdrive"] }
rustc-hash = "2.1.1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
tokio = { version = "1", features = ["full"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
confy = "2.0.0"
toml = "1.0.7"
tokio-util = "0.7.18"
